# axplat-aarch64-crosvm-virt

./: Cargo.toml  README.md  axconfig.toml  build.rs
src/: boot.rs  fdt.rs  gicv3.rs  init.rs  lib.rs  mem.rs  power.rs  psci.rs  serial.rs
